Adding unit_test.c

--- a/Final_Project/src/Makefile
+++ b/Final_Project/src/Makefile
@@ -1,6 +1,6 @@
 #_*_ Makefile _*_
 
-CC=gcc
+CC=g++
 
 CFLAGS = -I../inc/ -pthread -lrt -Werror
 
@@ -8,11 +8,13 @@ vpath %.h ../inc/
 
 OBJ = main.o FG_Locking_BST.o
 
+all:concurrent_tree
+
 concurrent_tree: $(OBJ)
 	$(CC) -o concurrent_tree $(OBJ) -lpthread -lrt
 
-main.o: main.c main.h
-	$(CC) -c -g main.c $(CFLAGS)
+main.o: main.cpp main.h
+	$(CC) -c -g main.cpp $(CFLAGS)
 
 FG_Locking_BST.o: FG_Locking_BST.c FG_Locking_BST.h
 	$(CC) -c -g FG_Locking_BST.c $(CFLAGS)
