Adding --help option and modifying makefile to accomodate unit testing files

--- a/Final_Project/src/Makefile
+++ b/Final_Project/src/Makefile
@@ -8,10 +8,13 @@ vpath %.h ../inc/
 
 OBJ = main.o FG_Locking_BST.o
 
-all:concurrent_tree
+all:concurrent_tree unit_test
 
 concurrent_tree: $(OBJ)
 	$(CC) -o concurrent_tree $(OBJ) -lpthread -lrt
+
+unit_test: FG_Locking_BST.o unit_test.o
+	$(CC) -o unit_test FG_Locking_BST.o unit_test.o -lpthread -lrt -lcunit
 
 main.o: main.cpp main.h
 	$(CC) -c -g main.cpp $(CFLAGS)
@@ -19,5 +22,9 @@ main.o: main.cpp main.h
 FG_Locking_BST.o: FG_Locking_BST.c FG_Locking_BST.h
 	$(CC) -c -g FG_Locking_BST.c $(CFLAGS)
 
+
+unit_test.o: unit_test.c main.h FG_Locking_BST.h
+	$(CC) -c -g unit_test.c $(CFLAGS) -lcunit
+
 clean:
-	-rm -f *.o concurrent_tree
+	-rm -f *.o *.xml concurrent_tree unit_test
